--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 
             <header>
 
-                <a href="#"><img src="Assets/logo.svg" alt="logo"></a>
+                <a href="#"><img src="Assets/apple.png" width="120px" height="120px" alt="logo"></a>
 
                 <nav>
                     <ul>
-                        <li><a href"">Home</a></li>
-                        <li><a href"">Courses</a></li>
-                        <li><a href"">Services</a></li>
-                        <li><a href"">About Us</a></li>
-                        <li><a href"">Contact Us</a></li>
-                        <li><a href""></a></li>
-                        <li><a href"" class="btn">Sign Up</a></li>
+                        <li> <a href="">Home</a></li>
+                        <li><a href="">Courses</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="" class="btn">Sign Up</a></li>
                     </ul>
 
 
@@ -32,10 +31,10 @@
             </header>
 
 
-
+            
 
         </div>
 
-
+        
 </body>
 </html>
