--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
                 <nav>
                     <ul>
                         <li> <a href="">Home</a></li>
-                        <li><a href="">Courses</a></li>
+                        <li><a href="">Courses</a>
+                            <ul class="submenu">
+                                <li><a href="#">HTML</a></li>
+                                <li><a href="#">CSS</a></li>
+                                <li><a href="#">JavaScript</a></li>
+                            </ul>
+                        </li>
                         <li><a href="">Services</a></li>
                         <li><a href="">About Us</a></li>
                         <li><a href="">Contact Us</a></li>
